--- a/index.html
+++ b/index.html
@@ -1,13 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!----------------------
+        Style CSS
+    ----------------------------------->
     <link rel="stylesheet" href="Style/style.css">
+    <!------------------Font awesome-------------->
+    <script src="https://kit.fontawesome.com/2b8ef4bdbb.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    
+
 </body>
+<!-----------------
+    header--------------->
+<header>
+    <h3>Influencer products</h3>
+    <nav>
+        <ul>
+            <li><a href="">Home</a> </li>
+            <li><a href="">Products</a> </li>
+            <li><a href="">Sign up</a> </li>
+            <li><a href="">Log In</a> </li>
+            <li><i class="fas fa-search"></i></li>
+            <li><i class="fas fa-shopping-cart"></i></li>
+
+        </ul>
+    </nav>
+
+</header>
+<main>
+
+    <!-----------------
+    Influencer--------------->
+    <section class="section-1">
+        <div class="influencer-products">
+            <div class="products">
+                <div class="products-info">
+                    <h1 class="products-title">Start your Journey as
+                        Influencer</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros.
+                        Lectus
+                        faucibus.</p>
+                    <button>Preebook now <i class="fas fa-arrow-circle-right"></i></button>
+                </div>
+                <div class="products-img">
+                    <img src="./influencer-gear-main/images/main-camera.png" alt="">
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <!------------------
+        company-icon------------>
+    <section class="company-icon">
+        <hr>
+        <div class="icon">
+            <img src="./influencer-gear-main/logos/Alibaba.svg" alt="">
+            <img src="./influencer-gear-main/logos/Amazon.svg" alt="">
+            <img src="./influencer-gear-main/logos/Daraz.pk Logo.svg" alt="">
+            <img src="./influencer-gear-main/logos/Ebay.svg" alt="">
+            <img src="./influencer-gear-main/logos/Rakuten.svg" alt="">
+            <img src="./influencer-gear-main/logos/Target.svg" alt="">
+            <img src="./influencer-gear-main/logos/Walmart.svg" alt="">
+
+        </div>
+        <hr>
+
+    </section>
+
+    <!--------------
+        Popular Collection------->
+    <section class="Popular-Collection">
+        <div class="Collection-info">
+            <div class="Collection">
+                <div class="image">
+                    <img src="./influencer-gear-main/images/tripod.png" alt="">
+                </div>
+                <div class="Collection-details">
+                    <h2>Flex Tripod</h2>
+                    <h3>$50.48</h3>
+                    <div class="rating">
+
+                    </div>
+                    <p>Wordwide shifting available
+                        Buyers protection possible!</p>
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+
+</main>
+
+
+<footer></footer>
+
 </html>
