--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <h3>Influencer products</h3>
     <nav>
         <ul>
-            <li><a href="">Home</a> </li>
-            <li><a href="">Products</a> </li>
-            <li><a href="">Sign up</a> </li>
-            <li><a href="">Log In</a> </li>
+            <li><span> <a href="">Home</a> </span></li>
+            <li><a href="">Products</a></li>
+            <li><a href="">Signup</a></li>
+            <li><a href="">Login</a></li>
             <li><i class="fas fa-search"></i></li>
             <li><i class="fas fa-shopping-cart"></i></li>
 
@@ -44,9 +44,9 @@
                 <div class="products-info">
                     <h1 class="products-title">Start your Journey as
                         Influencer</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros.
-                        Lectus
-                        faucibus.</p>
+                    <p>WE BUILD MEANINGFUL RELATIONSHIPS BETWEEN BRANDS AND CREATORS
+                        We enable your brand to be seen at scale across digital; driving growth and guaranteed success.
+                    </p>
                     <button>Preebook now <i class="fas fa-arrow-circle-right"></i></button>
                 </div>
                 <div class="products-img">
@@ -60,7 +60,7 @@
     <!------------------
         company-icon------------>
     <section class="company-icon">
-        <hr>
+
         <div class="icon">
             <img src="./influencer-gear-main/logos/Alibaba.svg" alt="">
             <img src="./influencer-gear-main/logos/Amazon.svg" alt="">
@@ -71,13 +71,14 @@
             <img src="./influencer-gear-main/logos/Walmart.svg" alt="">
 
         </div>
-        <hr>
+
 
     </section>
 
     <!--------------
         Popular Collection------->
     <section class="Popular-Collection">
+        <h2 class="Collection-title" id="title">Popular Collection</h2>
         <div class="Collection-info">
             <div class="Collection">
                 <div class="image">
@@ -87,20 +88,219 @@
                     <h2>Flex Tripod</h2>
                     <h3>$50.48</h3>
                     <div class="rating">
-
+                        <p>
+                            <i class="fas fa-star felled"></i>
+                            <i class="fas fa-star felled"></i>
+                            <i class="fas fa-star felled"></i>
+                            <i class="fas fa-star felled"></i>
+                            <i class="fas fa-star-half-alt empty"></i>
+                            <span> 4.99</span>
+                        </p>
                     </div>
-                    <p>Wordwide shifting available
-                        Buyers protection possible!</p>
+                    <article>Wordwide shifting available
+                        Buyers protection possible!</article>
+                </div>
+
+            </div>
+            <div class="Collection">
+                <div class="image">
+                    <img src="./influencer-gear-main/images/mic.png" alt="">
+                </div>
+                <div class="Collection-details">
+                    <h2>Microphone</h2>
+                    <h3>$120.25</h3>
+                    <div class="rating">
+                        <p>
+                            <i class="fas fa-star felled"></i>
+                            <i class="fas fa-star felled"></i>
+                            <i class="fas fa-star felled"></i>
+                            <i class="fas fa-star felled"></i>
+                            <i class="fas fa-star-half-alt empty"></i>
+                            <span> 4.99</span>
+                        </p>
+                    </div>
+                    <article>Wordwide shifting available
+                        Buyers protection possible!</article>
+                </div>
+            </div>
+            <div class="Collection">
+                <div class="image">
+                    <img src="./influencer-gear-main/images/airpod.png" alt="">
+                </div>
+                <div class="Collection-details">
+                    <h2>Airbuds</h2>
+                    <h3>$100.00</h3>
+                    <div class="rating">
+                        <p>
+                            <i class="fas fa-star felled"></i>
+                            <i class="fas fa-star felled"></i>
+                            <i class="fas fa-star felled"></i>
+                            <i class="fas fa-star felled"></i>
+                            <i class="fas fa-star-half-alt empty"></i>
+                            <span> 4.99</span>
+                        </p>
+                    </div>
+                    <article>Wordwide shifting available
+                        Buyers protection possible!</article>
+                </div>
+            </div>
+            <div class="Collection">
+                <div class="image">
+                    <img src="./influencer-gear-main/images/drone.png" alt="">
+                </div>
+                <div class="Collection-details">
+                    <h2>Drone</h2>
+                    <h3>$980.25</h3>
+                    <div class="rating">
+                        <p>
+                            <i class="fas fa-star felled"></i>
+                            <i class="fas fa-star felled"></i>
+                            <i class="fas fa-star felled"></i>
+                            <i class="fas fa-star felled"></i>
+                            <i class="fas fa-star-half-alt empty"></i>
+                            <span> 4.99</span>
+                        </p>
+                    </div>
+                    <article>Wordwide shifting available
+                        Buyers protection possible!</article>
+                </div>
+            </div>
+            <div class="Collection">
+                <div class="image">
+                    <img src="./influencer-gear-main/images/lights.png" alt="">
+                </div>
+                <div class="Collection-details">
+                    <h2>Light Setup</h2>
+                    <h3>$1200.00</h3>
+                    <div class="rating">
+                        <p>
+                            <i class="fas fa-star felled"></i>
+                            <i class="fas fa-star felled"></i>
+                            <i class="fas fa-star felled"></i>
+                            <i class="fas fa-star felled"></i>
+                            <i class="fas fa-star-half-alt empty"></i>
+                            <span> 4.99</span>
+                        </p>
+                    </div>
+                    <article>Wordwide shifting available
+                        Buyers protection possible!</article>
+                </div>
+            </div>
+            <div class="Collection">
+                <div class="image">
+                    <img src="./influencer-gear-main/images/setup.png" alt="">
+                </div>
+                <div class="Collection-details">
+                    <h2>Photoshoot set</h2>
+                    <h3>$820.40</h3>
+                    <div class="rating">
+                        <p>
+                            <i class="fas fa-star felled"></i>
+                            <i class="fas fa-star felled"></i>
+                            <i class="fas fa-star felled"></i>
+                            <i class="fas fa-star felled"></i>
+                            <i class="fas fa-star-half-alt empty"></i>
+                            <span> 4.99</span>
+                        </p>
+                    </div>
+                    <article>Wordwide shifting available
+                        Buyers protection possible!</article>
+                </div>
+            </div>
+            <div class="Collection">
+                <div class="image">
+                    <img src="./influencer-gear-main/images/camera.png" alt="">
+                </div>
+                <div class="Collection-details">
+                    <h2>Vlogging Camera</h2>
+                    <h3>$1800.80</h3>
+                    <div class="rating">
+                        <p>
+                            <i class="fas fa-star felled"></i>
+                            <i class="fas fa-star felled"></i>
+                            <i class="fas fa-star felled"></i>
+                            <i class="fas fa-star felled"></i>
+                            <i class="fas fa-star-half-alt empty"></i>
+                            <span> 4.99</span>
+                        </p>
+                    </div>
+                    <article>Wordwide shifting available
+                        Buyers protection possible!</article>
+                </div>
+            </div>
+            <div class="Collection">
+                <div class="image">
+                    <img src="./influencer-gear-main/images/single-light.png" alt="">
+                </div>
+                <div class="Collection-details">
+                    <h2>Green Screen</h2>
+                    <h3>$25.48</h3>
+                    <div class="rating">
+                        <p>
+                            <i class="fas fa-star felled"></i>
+                            <i class="fas fa-star felled"></i>
+                            <i class="fas fa-star felled"></i>
+                            <i class="fas fa-star felled"></i>
+                            <i class="fas fa-star-half-alt empty"></i>
+                            <span> 4.99</span>
+                        </p>
+                    </div>
+                    <article>Wordwide shifting available
+                        Buyers protection possible!</article>
+                </div>
+            </div>
+            <div class="Collection">
+                <div class="image">
+                    <img src="./influencer-gear-main/images/action.png" alt="">
+                </div>
+                <div class="Collection-details">
+                    <h2>Action Camera</h2>
+                    <h3>$380.00</h3>
+                    <div class="rating">
+                        <p>
+                            <i class="fas fa-star felled"></i>
+                            <i class="fas fa-star felled"></i>
+                            <i class="fas fa-star felled"></i>
+                            <i class="fas fa-star felled"></i>
+                            <i class="fas fa-star-half-alt empty"></i>
+                            <span> 4.99</span>
+                        </p>
+                    </div>
+                    <article>Wordwide shifting available
+                        Buyers protection possible!</article>
                 </div>
             </div>
 
         </div>
+        <p class="See-More"><a href="">See More <i class="fas fa-long-arrow-alt-right"></i></a></p>
 
+    </section>
+    <section class="Sign-up-form">
+        <div class="Sign-up">
+            <div class="form">
+                <form action="">
+                    <fieldset>
+                        <legend>Sign Up Now</legend>
+
+                        <label for=""><input type="text" placeholder="Enter your name" required> </label>
+                        <label for=""><input type="email" placeholder="Enter your email" required> </label>
+                        <label for=""><input type="password" placeholder="Enter your password" required> </label>
+                        <label for=""><input type="submit" class="submit"> </label>
+                    </fieldset>
+                </form>
+            </div>
+        </div>
     </section>
 
 </main>
 
 
-<footer></footer>
+<footer>
+    <div class="footer-div">
+        <h1 id="title">Influencer products</h1>
+        <small>Copyright &copy; 2020 influencer products</small><br>
+        <small>All rights reserved</small>
+    </div>
+</footer>
 
 </html>
